projectsend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: projectsend
  name: projectsend-ui
  namespace: projectsend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  selector:
    app: projectsend
