projectsend/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: projectsend
  namespace: projectsend
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "projectsend.ucdialplans.com"
  rules:
  - backendRefs:
    - name: projectsend-ui
      namespace: projectsend
      kind: Service
      port: 80
